Fix up sentence

--- a/README.adoc
+++ b/README.adoc
@@ -74,8 +74,8 @@ The garden is, first and foremost, making that implicit and individual activity 
 Instead of individual accumulating "the discourse" in our heads based off the stream, we can directly write down that accumulation and exchange that instead.
 The garden "cuts to the chase" focusing on the end result rather than the skeuomorphic stream historically used to get us there.
 
-The snarky title is left as either an exercise for the reader to do some web searching, or an exercise for me to write more stuff.
-We'll see!
+Unraveling the snarky title is left as either an exercise for the reader to do some web searching, or an exercise for me to write more stuff.
+We'll see who gets there first!
 
 === Calculus
 
