Render garden stream link nicely

--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,8 @@
 
 == Time, labor, and shitposting
 
-https://hapgood.us/2015/10/17/the-garden-and-the-stream-a-technopastoral/ is a nice piece, critiquing the form of most writing in the internet age.)
+https://hapgood.us/2015/10/17/the-garden-and-the-stream-a-technopastoral/[The Garden and the Stream: A Technopastoral] is a nice piece, critiquing the form of most writing in the internet age.
+It is the basis for this section.
 
 It is worth a read, but let me both highly condense the key points and argue them from a slightly different perspective.
 
